# maf-poc

./: .codecov.yml  .dockerignore  .gitignore  Makefile  README.md  buildspec.yml  docker-compose.yml
.circleci/: config.yml
.github/: CODEOWNERS  pull_request_template.md
backend/: Makefile  README.md  pyproject.toml
backend/api/: main.py
backend/app/: run.py
backend/app/app/: __init__.py
backend/app/app/controller/: campaign.py
backend/app/app/model/: __init__.py
backend/config/: test.db
backend/migrations/: migrations.py
backend/tests/: test_main.py
data/: campaigns.csv  product_kpis.csv  products.csv
docker/: Dockerfile.api  Dockerfile.static  entrypoint.sh  gunicorn_conf.py  nginx.conf  schema_code.sql
frontend/: .eslintrc.js  Makefile  README.md  package-lock.json  package.json
frontend/src/: App.css  App.jsx  App.scss  App.test.jsx  Vars.scss  config.js  theme.css  theme.scss
frontend/src/actions/: HATEOASActions.js  actions.test.js  campaignActions.js  campaignActions.test.js  userActions.js  userActions.test.js
frontend/src/constants/: HATEOASConstants.js
frontend/src/containers/Campaign/: Campaign.css  Campaign.jsx  Campaign.scss  Campaign.test.jsx
frontend/src/middleware/: hateoasApi.js  hateoasApi.test.js
frontend/src/reducers/: loginReducer.js  loginReducer.test.js  roodReducer.js  rootReducer.js
frontend/src/schemas/: HATEOAS.js  campaignSchema.js  index.js
frontend/src/services/: RESTClient.js  RESTClient.test.js  authService.js
frontend/src/store/: appStore.dev.js  appStore.prod.js
(+39 files in other folders)
