[tool.poetry]
name = "api"
version = "0.1.0"
description = "MAF API POC"
authors = ["Eugene Yunak <yyunak@softserveinc.com>"]

[tool.poetry.dependencies]
python = "^3.7"
flask = "^1.0"

[tool.poetry.dev-dependencies]
pytest = "^3.0"
flake8 = "^3.7"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
